wrap fixed, fix timeout and add exams

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
   width: 100vw;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 #exams-menu {
